postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-postgres
  labels:
    app: my-postgres
spec:
  containers:
  - name: my-postgres
    image: dc2.my-bg.ru/shb/postgres:10
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 5432
  imagePullSecrets:
    - name: regcred
