postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name:
  labels:
    app:
spec:
  replicas: 1
  template:
    metadata:
      name:
      labels:
        app:
    spec:
      containers:
      - name:
        image:
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app:
