shbback-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shb-back
  labels:
    app: shb-back
spec:
  containers:
  - name: shb-back
    image: dc2.my-bg.ru/shb/shb:SNAPSHOT-1.0.0.118
    imagePullPolicy: IfNotPresent
    volumeMounts:
      - name: config-volume
        mountPath: /conf
      - name: jks-volume
        mountPath: /conf/keystores
  volumes:
    - name: config-volume
      configMap:
        name: spring-app-config
    - name: jks-volume
      configMap:
        name: shb-jks
  imagePullSecrets:
  - name: regcred
  restartPolicy: Always
