postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-postgres
spec:
  selector:
    app: my-postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: NodePort
