shbback-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: shb-back
  labels:
    app: shb-back
spec:
  selector:
    app: shb-back
  ports:
  - port: 8080
  type: NodePort
