shbui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.host
    http:
      paths:
      - path: /api
        backend:
          serviceName: shb-back
          servicePort: 8080
      - path: /
        backend:
          serviceName: shb-ui
          servicePort: 80
